--- a/jwebppy/src/main/resources/templates/platform/common/authentication/change_password.html
+++ b/jwebppy/src/main/resources/templates/platform/common/authentication/change_password.html
@@ -27,7 +27,7 @@
 <script>
 let INDEX_URL = "[[${T(org.jwebppy.platform.core.PlatformConfigVo).INDEX_URL}]]";
 
-$(window).load(function() {
+$(window).on("load", function() {
 	showLoginBox();
 	$("#password").focus();
 	
