--- a/jwebppy/src/main/resources/templates/platform/layout/common/fragments/bottom.html
+++ b/jwebppy/src/main/resources/templates/platform/layout/common/fragments/bottom.html
@@ -38,7 +38,7 @@
 	<button class="ui icon button big"><i class="arrow up icon"></i></button>
 </div>
 <script>
-$(window).load(function() {
+$(window).on("load", function() {
 });
 
 $(document).ready(function() {
