--- a/jwebppy/src/main/resources/templates/platform/layout/common/fragments/top.html
+++ b/jwebppy/src/main/resources/templates/platform/layout/common/fragments/top.html
@@ -10,7 +10,7 @@ function makeGmb()
 	let menu = [];
 
 	JpUtilsAjax.get({
-		url: "/platform/mgmt/gnb/menu",
+		url: "/platform/mgmt/gmb/menu",
 		success: function(data, textStatus, jqXHR)
 		{
 			menu.push("<div class='header item'>");
