--- a/jwebppy/src/main/resources/templates/portal/layout/iv/hq/parts/common/fragments/bottom.html
+++ b/jwebppy/src/main/resources/templates/portal/layout/iv/hq/parts/common/fragments/bottom.html
@@ -3,8 +3,8 @@
 	<div class="footer">
 		<div class="split-row-compact"></div>
 		<div class="logo-area">
-			<img class="footer-logo" th:src="@{/portal/img/logo-s.png}" alt="Doosan"/>
-			<div class="split"></div>
+			<!-- img class="footer-logo" th:src="@{/portal/img/logo-s.png}" alt="Doosan"/>
+			<div class="split"></div -->
 			<div class="copyright" th:text="#{PTL_T_COPY_RIGHT}"></div>
 		</div>
 		<div>
