--- a/jwebppy/src/main/resources/templates/portal/layout/iv/hq/parts/common/fragments/css.html
+++ b/jwebppy/src/main/resources/templates/portal/layout/iv/hq/parts/common/fragments/css.html
@@ -1,12 +1,13 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.css"/>
 <link rel="stylesheet" href="https://cdn.datatables.net/1.11.4/css/jquery.dataTables.min.css"/>
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css"/>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fomantic-ui/2.8.8/semantic.min.css"/>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/dropzone/5.9.3/dropzone.min.css"/>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/c3/0.7.20/c3.min.css"/>
 
 <!-- custom css -->
 <link rel="stylesheet" type="text/css" th:href="@{/portal/css/basic.css}" />
 <link rel="stylesheet" type="text/css" th:href="@{/portal/js/datatables/datatables.custom.css}" />
+<link rel="stylesheet" type="text/css" th:href="@{/portal/css/gmb.css}">
 
 <!-- link rel="stylesheet" type="text/css" th:href="@{/portal/js/jquery-ui/jquery-ui.css}" />
 <link rel="stylesheet" type="text/css" th:href="@{/portal/js/datatables/datatables.min.css}" />
